<resources>
    <string name="app_name">TodoWithDiary</string>
    <string name="bt_Private">Private</string>
    <string name="bt_Work">Work</string>
    <string name="bt_Diary">Diary</string>
    <string name="bt_newTodo">新規作成</string>
    <string name="bt_OnClickBack">戻る</string>
    <string name="title">PRIVATE : TODO</string>
    <string name="title_work">WORK : TODO</string>
    <string name="title_diary">DIARY : TODO</string>
    <string name="registerText">内容を入力してください。</string>
    <string name="bt_register">登録</string>
    <string name="bt_delete">全削除</string>
    <string name="dialog_title">確認</string>
    <string name="dialog_message">全ての項目を削除します。よろしいですか？</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_ng">NG</string>
    <string name="dialog_ok_toast">削除しました</string>
    <string name="dialog_ng_toast">削除しませんでした</string>
</resources>
